Fix: overflow issue and adjust slide layout for responsive (max-width: 767px)

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -371,8 +371,9 @@
 
     /* Slider */
 
-
-    .bestellers .slides {
+    .why-choose .slides,
+    .bestellers .slides,
+    .customer-benefits .slides {
         min-width: 100%;
         width: auto;
         scroll-padding-inline: 15px;
